src/objects/AcctSeed__AP_Disbursement__c.object
<CustomObject>
    <description>Used to document the relationship an payable has with a cash disbursement.</description>
    <fields>
        <fullName>AcctSeed__Account_Payable_Date__c</fullName>
        <formula>AcctSeed__Account_Payable__r.AcctSeed__Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payable Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Account_Payable__c</fullName>
        <inlineHelpText>Related Payable Invoice.</inlineHelpText>
        <label>Payable</label>
        <referenceTo>AcctSeed__Account_Payable__c</referenceTo>
        <relationshipLabel>Applied Cash Disbursements</relationshipLabel>
        <relationshipName>Account_Payable_Cash_Disbursements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applied Accounting Period</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Period__c.AcctSeed__Status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <infoMessage>The accounting period status must be open</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>AP Disbursements</relationshipLabel>
        <relationshipName>AP_Disbursements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Applied_Date__c</fullName>
        <inlineHelpText>Used to specify the applied date for financial reporting.</inlineHelpText>
        <label>Applied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_Disbursement__c</fullName>
        <inlineHelpText>Related Cash Disbursement.</inlineHelpText>
        <label>Cash Disbursement</label>
        <referenceTo>AcctSeed__Cash_Disbursement__c</referenceTo>
        <relationshipLabel>Invoices Applied To</relationshipLabel>
        <relationshipName>Account_Payable_Cash_Disbursements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Disbursement_Period__c</fullName>
        <formula>AcctSeed__Cash_Disbursement__r.AcctSeed__Accounting_Period__r.Name</formula>
        <inlineHelpText>Accounting Period of Cash Disbursement</inlineHelpText>
        <label>Disbursement Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Amount__c</fullName>
        <formula>IF( AcctSeed__Paid_Amount__c  &gt; 0, AcctSeed__Account_Payable__r.AcctSeed__Discount_Amount__c, AcctSeed__Account_Payable__r.AcctSeed__Discount_Amount__c *-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of discount taken in the payment process.</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Net_Amount__c</fullName>
        <formula>AcctSeed__Account_Payable__r.AcctSeed__Net_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Payable invoice - discount amount</inlineHelpText>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Paid_Amount__c</fullName>
        <inlineHelpText>Amount of Cash Disbursement</inlineHelpText>
        <label>Applied Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payable_Account__c</fullName>
        <formula>AcctSeed__Account_Payable__r.AcctSeed__Vendor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payable Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payable_Amount__c</fullName>
        <formula>AcctSeed__Account_Payable__r.AcctSeed__Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payee_Reference__c</fullName>
        <formula>AcctSeed__Account_Payable__r.AcctSeed__Payee_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AP Disbursement</label>
    <nameField>
        <displayFormat>APD-{00000}</displayFormat>
        <label>AP Disbursement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AP Disbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Prevent_Modifying_Paid_Amount</fullName>
        <active>true</active>
        <description>DO NOT disable this validation rule unless instructed by Accounting Seed Support.</description>
        <errorConditionFormula>(!ISNEW()) &amp;&amp; ROUND(PRIORVALUE(AcctSeed__Paid_Amount__c),2) != ROUND(AcctSeed__Paid_Amount__c,2)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Paid_Amount__c</errorDisplayField>
        <errorMessage>You cannot change Paid Amount value directly.</errorMessage>
    </validationRules>
</CustomObject>